aggiunti commenti e pulito codice

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10004,10 +10004,20 @@ h3 {
     border-color: #dee2e6;
   }
 }
-h1, h2, h3 {
+body {
+  background-color: #AB4514;
+}
+
+h1 {
   text-align: center;
   margin: 100px 0px;
-  color: orange;
+  color: #FEE925;
+}
+
+h2, h3 {
+  text-align: center;
+  margin: 100px 0px;
+  color: #FEE925;
 }
 
 #back_btn {
